# ralph-7

./: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
config/: joystick.yaml  my_controllers.yaml  nav_params_online_async.yaml
description/: depth_sensor.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro
docs/PCB/: BOM_R8.1_2025-01-21.csv  Drill_NPTH_Through.DRL  Drill_PTH_Through.DRL  Drill_PTH_Through_Via.DRL  Gerber_BoardOutlineLayer.GKO  Gerber_BottomLayer.GBL  Gerber_BottomPasteMaskLayer.GBP  Gerber_BottomSilkscreenLayer.GBO  Gerber_BottomSolderMaskLayer.GBS  Gerber_DocumentLayer.GDL  Gerber_TopLayer.GTL  Gerber_TopPasteMaskLayer.GTP  Gerber_TopSilkscreenLayer.GTO  Gerber_TopSolderMaskLayer.GTS
docs/Print Files/: 140mm Panel with cutout.stl  180 Side Panel V2.stl  Base Blank Plate 25mm.stl  Base Blank Plate 45mm.stl  Batt Mount Clip.stl  Battery Clip V2.stl  Battery Mount.stl  Castor V3.stl  Corner Pieces V2.stl  Fore - Top plate.stl  GPS Holddown V2.stl  GPS Mount V3.stl  HeadLight V5 L.stl  HeadLight V5 R.stl  L298 Mount V2.stl  M2 Side Clamps.stl  M2X2mm Spacer.stl  Nano Mount V2.stl  PS distribution plate.stl  Pi Mount V3.stl  Pi Standoff.stl  RP ACCESSORY.stl  RPLIDAR mount v2.stl  RealSense Mount.stl  Router Clip.stl  Router Mount V2.stl  (+7 more)
hardware/: CMakeLists.txt  README.md  pico_micro_ros_example.cpp
launch/: depth.launch.py  joystick.launch.py  launch_robot.launch.py  rs_launch.py  rsp.launch.py
maps/: currentmap.data  currentmap.pgm  currentmap.yaml
ralph_7/: color_pub.py
scripts/: gps_pub.py
(+4 files in other folders)
